# butler-agent-node

./: README.md  package.xml
high_level_reasoning/: CMakeLists.txt  package.xml
high_level_reasoning/action/: AgentChatInteraction.action  ExecuteCommand.action  SystemOperativeCheck.action
high_level_reasoning/msg/: Pddl.msg  SystemState.msg
high_level_reasoning/srv/: OllamaChatInteraction.srv
src/frontend/: package.xml  readme.md  setup.py
src/frontend/frontend/commands/: executor.py  pipeline.py  repository.py  states.py  tracker.py
src/frontend/frontend/frontend/: ollama_client_cli.py  readme.md  server.py
