cmake_minimum_required(VERSION 3.16)
project(high_level_reasoning_interface)

find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(builtin_interfaces REQUIRED)
find_package(std_msgs REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/Pddl.msg"
  "msg/SystemState.msg"
  "srv/OllamaChatInteraction.srv"
  "action/AgentChatInteraction.action"
  "action/SystemOperativeCheck.action"
  "action/ExecuteCommand.action"
  DEPENDENCIES builtin_interfaces std_msgs
)

ament_export_dependencies(rosidl_default_runtime)
ament_package()
